WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
71981
[chromium] Fix typo in checkerboarding code
https://bugs.webkit.org/show_bug.cgi?id=71981
Summary
[chromium] Fix typo in checkerboarding code
Daniel Sievers
Reported
2011-11-09 17:50:24 PST
[chromium] Fix typo in checkerboarding code
Attachments
Patch
(1.67 KB, patch)
2011-11-09 17:51 PST
,
Daniel Sievers
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Daniel Sievers
Comment 1
2011-11-09 17:51:20 PST
Created
attachment 114411
[details]
Patch
James Robinson
Comment 2
2011-11-09 17:52:55 PST
Comment on
attachment 114411
[details]
Patch R=me
WebKit Review Bot
Comment 3
2011-11-09 18:40:28 PST
Comment on
attachment 114411
[details]
Patch Clearing flags on attachment: 114411 Committed
r99799
: <
http://trac.webkit.org/changeset/99799
>
WebKit Review Bot
Comment 4
2011-11-09 18:40:32 PST
All reviewed patches have been landed. Closing bug.
Adrienne Walker
Comment 5
2011-11-10 10:40:10 PST
Oops. Thanks for fixing this. :)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug