[chromium] Fix typo in checkerboarding code https://bugs.webkit.org/show_bug.cgi?id=71981

Patch by Daniel Sievers <sievers@chromium.org> on 2011-11-09
Reviewed by James Robinson.

No new tests.

* platform/graphics/chromium/cc/CCTiledLayerImpl.cpp:
(WebCore::CCTiledLayerImpl::drawTiles):

Canonical link: https://commits.webkit.org/88362@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99799 268f45cc-cd09-0410-ab3c-d52691b4dbfc